--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <li><b><a href="https://www.flaticon.com/br/" target="_blank">Flat Icons</b></a>
             </li>
           </ul>
-        <li><a href="https://3o-trabalho.iurylohan.repl.co/" target="" class="pessoal-hover"><b>Refresh</b></a>
+        <li><a href="https://iurylohan01.github.io/Web1Trabalho3/" target="" class="pessoal-hover"><b>Refresh</b></a>
         </li>
     </nav>
   </div>
