--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <ul>
         <li><a><b>Sobre</b></a>
           <ul>
-            <li><b><a href="https://github.com/iurylohan01/Web1Trabalho3 target=" _blank">Repositório Git</a></b></li>
+            <li><b><a href="https://github.com/iurylohan01/Web1Trabalho3" _blank">Repositório Git</a></b></li>
             <li><b><a href="https://replit.com/@IuryLohan/3o-Trabalho#index.html">Código Repl.it</a></b></li>
             <li><b><a href="https://www.flaticon.com/br/" target="_blank">Flat Icons</b></a>
             </li>
