--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="circle circle-green"><img class="icones" src="img/ar-condicionado.png" alt="" width="50em"></div>
 
       <div class="text-solid">
-        <p><b> A1:</b> Manutenção </p>
+        <p><b> B1:</b> Manutenção </p>
         <p><b> B2:</b> Ligado </p>
         <p><b> B3:</b> Desligado </p>
         <p><b> B4:</b> Desligado </p>
